--- a/project/Makefile
+++ b/project/Makefile
@@ -1,12 +1,13 @@
 NAME = ircserver
 
 CXX = c++
-CXXFLAGS = -Wall -Werror -Wextra -std=c++98 -g
+CXXFLAGS = -Wall -Werror -Wextra -std=c++98  -fsanitize=address -g3
 
 OBJDIR = ./obj/
 SRCDIR = ./src/
 
-SRC = server_t.cpp parsing.cpp
+SRC = Server.cpp Client.cpp parsing.cpp main.cpp
+# SRC = server_t.cpp parsing.cpp
 OBJ = $(addprefix $(OBJDIR), $(SRC:.cpp=.o))
 
 all:	$(OBJDIR) $(NAME) 
