--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,9 @@
 		"memory_resource": "cpp",
 		"numeric": "cpp",
 		"random": "cpp",
-		"numbers": "cpp"
+		"numbers": "cpp",
+		"__verbose_abort": "cpp",
+		"execution": "cpp",
+		"variant": "cpp"
 	}
 }
