--- a/project/Makefile
+++ b/project/Makefile
@@ -8,8 +8,8 @@ OBJDIR = ./obj/
 SRCDIR = ./src/
 
 # SRC = Server.cpp Client.cpp parsing.cpp main.cpp
-# SRC = server_t.cpp parsing.cpp
-SRC = Channel.cpp
+SRC = server_t.cpp parsing.cpp
+# SRC = Channel.cpp
 OBJ = $(addprefix $(OBJDIR), $(SRC:.cpp=.o))
 
 all:	$(OBJDIR) $(NAME) 
