--- a/project/Makefile
+++ b/project/Makefile
@@ -7,9 +7,9 @@ CXXFLAGS = -Wall -Werror -Wextra -std=c++98  -fsanitize=address -g3
 OBJDIR = ./obj/
 SRCDIR = ./src/
 
-SRC = Server.cpp Client.cpp parsing.cpp main.cpp
+# SRC = Server.cpp Client.cpp parsing.cpp main.cpp
 # SRC = server_t.cpp parsing.cpp
-# SRC = Channel.cpp
+SRC = Channel.cpp
 OBJ = $(addprefix $(OBJDIR), $(SRC:.cpp=.o))
 
 all:	$(OBJDIR) $(NAME) 
