implementing a message class

--- a/project/Makefile
+++ b/project/Makefile
@@ -9,7 +9,7 @@ SRCDIR = ./src/
 
 # SRC = Server.cpp Client.cpp parsing.cpp main.cpp
 # SRC = server_t.cpp parsing.cpp
-SRC = Channel.cpp
+SRC = main_t.cpp
 OBJ = $(addprefix $(OBJDIR), $(SRC:.cpp=.o))
 
 all:	$(OBJDIR) $(NAME) 
