--- a/project/Makefile
+++ b/project/Makefile
@@ -7,9 +7,9 @@ CXXFLAGS = -Wall -Werror -Wextra -std=c++98
 OBJDIR = ./obj/
 SRCDIR = ./src/
 
-# SRC = Server.cpp Client.cpp parsing.cpp main.cpp
+SRC = Server.cpp Client.cpp parsing.cpp main.cpp commands.cpp
 # SRC = server_t.cpp parsing.cpp
-SRC = main_t.cpp
+# SRC = main_t.cpp
 OBJ = $(addprefix $(OBJDIR), $(SRC:.cpp=.o))
 
 all:	$(OBJDIR) $(NAME) 
