--- a/project/Makefile
+++ b/project/Makefile
@@ -1,8 +1,14 @@
 NAME = ircserver
 
 CXX = c++
-# CXXFLAGS = -Wall -Werror -Wextra -std=c++98  -fsanitize=address -g3
-CXXFLAGS = -Wall -Werror -Wextra -std=c++98  
+CXXFLAGS = -Wall -Werror -Wextra -std=c++98  -fsanitize=address -g3
+# CXXFLAGS = -Wall -Werror -Wextra -std=c++98  
+
+RED = \033[1;31m
+GREEN = \033[1;32m
+YELLOW = \033[1;33m
+BLUE = \033[1;34m
+RESET = \033[0m
 
 OBJDIR = ./obj/
 SRCDIR = ./src/
@@ -18,10 +24,12 @@ $(OBJDIR):
 	@if [ ! -d "$(OBJDIR)" ]; then mkdir -p $(OBJDIR); fi
 
 $(NAME):	$(OBJ)
-	$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
+	@$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
 
 $(OBJDIR)%.o:	$(SRCDIR)%.cpp	
-	$(CXX) $(CXXFLAGS) -c -o $@ $<
+	@printf "$(YELLOW)Compiling$(RESET) $<:\r\t\t\t\t\t........................................."
+	@$(CXX) $(CXXFLAGS) -c -o $@ $<
+	@printf "\r\t\t\t\t\t$(RED)$(CXXFLAGS)$(RESET) $(GREEN)<DONE>$(RESET)\n"
 
 clean:
 	@ rm -r $(OBJDIR)/*
