commmiting before merge

--- a/.irssi/config
+++ b/.irssi/config
@@ -312,5 +312,6 @@ settings = {
     real_name = "Unknown";
     user_name = "somebody";
     nick = "somebody";
+    server_connect_timeout = "1000";
   };
 };
