join command adding key functionallity

--- a/project/Makefile
+++ b/project/Makefile
@@ -13,7 +13,7 @@ RESET = \033[0m
 OBJDIR = ./obj/
 SRCDIR = ./src/
 
-SRC = Server.cpp Client.cpp parsing.cpp main.cpp CommandCalls.cpp Channel.cpp CmdKick.cpp CmdTopic.cpp CmdJoin.cpp CmdInvite.cpp CmdPrivmsg.cpp
+SRC = Server.cpp Client.cpp parsing.cpp main.cpp CommandCalls.cpp Channel.cpp CmdKick.cpp CmdTopic.cpp CmdJoin.cpp CmdInvite.cpp CmdPrivmsg.cpp utils.cpp
 # SRC = Server.cpp Client.cpp parsing.cpp commandPath.cpp Channel.cpp serverChannel.cpp
 
 OBJ = $(addprefix $(OBJDIR), $(SRC:.cpp=.o))
@@ -27,7 +27,7 @@ $(NAME):	$(OBJ)
 	@$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
 
 $(OBJDIR)%.o:	$(SRCDIR)%.cpp	
-	@printf "$(YELLOW)Compiling$(RESET) $<:\r\t\t\t\t\t........................................."
+	@printf "$(YELLOW)Compiling$(RESET) $<:\r\t\t\t\t\t"
 	@$(CXX) $(CXXFLAGS) -c -o $@ $<
 	@printf "\r\t\t\t\t\t$(RED)$(CXXFLAGS)$(RESET) $(GREEN)<DONE>$(RESET)\n"
 
