--- a/project/Makefile
+++ b/project/Makefile
@@ -2,7 +2,7 @@ NAME = ircserver
 
 CXX = c++
 # CXXFLAGS = -Wall -Werror -Wextra -std=c++98  -fsanitize=address -g3
-CXXFLAGS = -Wall -Werror -Wextra -std=c++98  
+CXXFLAGS = -Wall -Werror -Wextra -std=c++98  -g3
 
 RED = \033[1;31m
 GREEN = \033[1;32m
